--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -18,6 +18,7 @@
     <string name="lightning_wallet">Lightning</string>
     <string name="total_balance">Saldo total</string>
     <string name="hosted_channel">HOSTED CHANNEL\nCustodial solution</string>
+    <string name="hosted_fiat_channel">HOSTED FIAT CHANNEL\nCustodial solution</string>
     <string name="typing_hints">Endereço Bitcoin, invoice, email&#8230;</string>
     <string name="copied_to_clipboard">Copiado para clipboard</string>
     <string name="add_address">Mais endereços novos</string>
@@ -233,8 +234,10 @@
     <string name="rpa_disconnected">Par remoto desconectado</string>
     <string name="rpa_no_feature_support">Não é possível abrir canais com este node pois alguns recursos importantes não são suportados pelo par remoto.</string>
     <string name="rpa_hc_warn"><![CDATA[<br><b>Atenção!</b><br><br>Os fundos do seu canal virtual ficarão armazenados em um servidor, certifique-se de que este par é confiável.]]></string>
+    <string name="rpa_fiat_hc_warn"><![CDATA[<br><b>Attention!</b><br><br>Os fundos do seu canal virtual ficarão armazenados em um servidor, certifique-se de que este par é confiável. <br><br>Seu saldo ficará restrito ao preço do dólar, então o saldo do satoshi estará flutuando]]></string>
     <string name="rpa_request_channel">Compartilhe o ID do seu node com o par remoto e mantenha esta página aberta para obter um canal.</string>
     <string name="rpa_request_hc">Solicitar canal virtual</string>
+    <string name="rpa_request_fiat_hc">Solicitar canal virtual en fiat</string>
     <string name="rpa_share_node_id">Compartilhar ID do node</string>
     <string name="rpa_open_nc">Custear novo canal</string>
 
