--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,7 +18,7 @@
     <string name="lightning_wallet">Молния</string>
     <string name="total_balance">Общий баланс</string>
     <string name="hosted_channel">HOSTED CHANNEL\nCustodial solution</string>
-    <string name="hosted_fiat_channel">HOSTED FIAT CHANNEL\nCustodial solution</string>
+    <string name="hosted_fiat_channel">FIAT CHANNEL\nCustodial solution</string>
     <string name="typing_hints">Биткойн адрес, инвойс, емейл&#8230;</string>
     <string name="copied_to_clipboard">Скопировано в буфер</string>
     <string name="add_address">Больше свежих адресов</string>
@@ -382,6 +382,9 @@
     <string name="chan_can_receive">Можно принять</string>
     <string name="chan_in_flight">В полете</string>
     <string name="chan_refundable">Можно вернуть</string>
+
+    <string name="chan_fiat_rate">Курс</string>
+    <string name="chan_fiat_value">Фиатный баланс</string>
 
     <string name="chan_nothing"><![CDATA[<i>ничего</i>]]></string>
 
