--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,7 +24,7 @@
     <string name="emergency_mode">Что-то пошло не так</string>
     <string name="error_log">Логи ошибок</string>
 
-    <string name="setup_title">Установка кошелька</string>
+    <string name="setup_title">Создание кошелька</string>
     <string name="setup_create_new">Создать новый кошелек</string>
     <string name="setup_restore_existing">Восстановить кошелек</string>
     <string name="setup_recovery_phrase">Только фраза восстановления</string>
