--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -220,7 +220,7 @@
     <string name="rpa_no_feature_support">Je kan geen kanalen openen met deze node omdat bepaalde belangrijke features not door de remote peer worden ondersteund.</string>
     <string name="rpa_hc_warn"><![CDATA[<br><b>Let op!</b><br><br>DE gelden van je gehost kanaal worden opgeslagen aan de hostzijde, wees zeker dat je deze peer kan vertrouwen om niet in opgelicht te worden.]]></string>
     <string name="rpa_request_channel">Deel je node-ID met remote peer en houd deze pagina open om een ontvangkanaal te krijgen.</string>
-    <string name="rpa_request_hc">Gebruik gehost Lightningkanaal</string>
+    <string name="rpa_request_hc_usd">Gebruik gehost Lightningkanaal</string>
     <string name="rpa_share_node_id">Deel node-ID</string>
     <string name="rpa_open_nc">Financier nieuw kanaal</string>
 
@@ -242,13 +242,8 @@
     <string name="settings_chain_modern">Hedendaagse portemonnee</string>
 
     <string name="settings_use_auth">Gebruik biometrische authenticatie</string>
-    <string name="settings_auth_no_support">Geen authenticatieondersteuning op dit apparaat</string>
-    <string name="settings_auth_add_method">Registreer een authenticatiemethode in de systeeminstellingen</string>
-    <string name="settings_auth_not_available">Authenticatieondersteuning is op dit moment geblokkeerd, probeer later nog eens</string>
-    <string name="settings_auth_error"><![CDATA[<b>Authenticatiefout</b><br><b>Details</b>: %1$s]]></string>
-    <string name="settings_auth_title">Portemonneeauthenticatie</string>
-
     <string name="settings_ensure_tor">Gebruik Torverbinding</string>
+
     <string name="ln_sync_not_complete">LN SYNC is nog niet klaar, wacht a.u.b. even terwijl je de app open houdt en probeer dan nog eens.</string>
     <string name="ln_payee_likely_offline">Het is waarschijnlijk dat de portemonnee van de begunstigde momenteel offline is</string>
 
