--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -388,6 +388,7 @@
         <item><![CDATA[Закрыть канал на адрес]]></item>
         <item><![CDATA[Получить в канал]]></item>
         <item><![CDATA[Пополнить из других каналов]]></item>
+        <item><![CDATA[Прямой вывод в канал (неприватно)]]></item>
     </array>
 
     <array name="ln_hosted_chan_actions">
@@ -396,6 +397,7 @@
         <item><![CDATA[Переместить средства]]></item>
         <item><![CDATA[Получить в канал]]></item>
         <item><![CDATA[Пополнить из других каналов]]></item>
+        <item><![CDATA[Прямой вывод в канал (неприватно)]]></item>
     </array>
 
     <string name="ln_hc_override">Override proposal</string>
