--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -220,7 +220,9 @@
     <string name="rpa_no_feature_support">Je kan geen kanalen openen met deze node omdat bepaalde belangrijke features not door de remote peer worden ondersteund.</string>
     <string name="rpa_hc_warn"><![CDATA[<br><b>Let op!</b><br><br>DE gelden van je gehost kanaal worden opgeslagen aan de hostzijde, wees zeker dat je deze peer kan vertrouwen om niet in opgelicht te worden.]]></string>
     <string name="rpa_request_channel">Deel je node-ID met remote peer en houd deze pagina open om een ontvangkanaal te krijgen.</string>
-    <string name="rpa_request_hc_usd">Gebruik gehost Lightningkanaal</string>
+    <string name="rpa_request_hc_usd">USD-fiatkanaal aanvragen</string>
+    <string name="rpa_request_hc_eur">EURO-fiatkanaal aanvragen</string>
+    <string name="rpa_request_ln_resync">Verzoek om hersynchronisatie van de LN-grafiek</string>
     <string name="rpa_share_node_id">Deel node-ID</string>
     <string name="rpa_open_nc">Financier nieuw kanaal</string>
 
