--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -263,6 +263,10 @@
     <string name="settings_view_revocery_phrase">Ver la frase de recuperación BIP39</string>
     <string name="settings_stats">Estadísticas de uso</string>
 
+    <string name="settings_backup_location">Dónde almacenar la copia de seguridad local</string>
+    <string name="settings_backup_location_too_old">La versión de Android es demasiado antigua para seleccionar el directorio</string>
+    <string name="settings_choose_directory">Elegir directorio</string>
+    
     <!-- /Settings activity -->
 
     <array name="parts_in_flight">
