--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -263,6 +263,10 @@
     <string name="settings_view_revocery_phrase">Ver a frase de recuperação BIP39</string>
     <string name="settings_stats">Estatísticas de uso</string>
 
+    <string name="settings_backup_location">Onde armazenar o backup local</string>
+    <string name="settings_backup_location_too_old">Versão do Android muito antiga para selecionar diretório</string>
+    <string name="settings_choose_directory">Escolha o diretório</string>
+
     <!-- /Settings activity -->
 
     <array name="parts_in_flight">
