--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -263,6 +263,10 @@
     <string name="settings_view_revocery_phrase">Фраза для восстановления</string>
     <string name="settings_stats">Статистика использования</string>
 
+    <string name="settings_backup_location">Место хранения локальной резервной копии</string>
+    <string name="settings_backup_location_too_old">Версия Android слишком стара для выбора директории</string>
+    <string name="settings_choose_directory">Выбрать директорию</string>
+
     <!-- /Settings activity -->
 
     <array name="parts_in_flight">
