--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -233,7 +233,8 @@
 
     <string name="settings_backup_disabled">Habilitar backup do canal</string>
     <string name="settings_backup_enabled">Backup do canal está habilitado</string>
-    <string name="settings_backup_where">Armazenado na pasta Download</string>
+    <string name="settings_backup_info">Configurar a permissão do sistema</string>
+    <string name="settings_backup_where">Por defeito, na pasta Download</string>
     <string name="settings_backup_how">Permissões do app -> Armazenar</string>
 
     <string name="settings_hardware_add">Add hardware wallet</string>
