Add Standard Hosted Channels (SAT) support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -441,6 +441,7 @@
     <string name="fiat_wallet">Fiat</string>
     <string name="fiat_wallet_usd">USD</string>
     <string name="fiat_wallet_eur">EUR</string>
+    <string name="hosted_wallet_sat">Hosted</string>
     <!-- /CPFP/RBF -->
 
 </resources>
